# rdr_rules_generator

./: README.md  pyproject.toml
data/: TIB_train.txt
data/json/: Marpa.json  chojuk.json
data/txt/: Marpa.txt  chojuk.txt
src/rules_generator/: Token.py  config.py  data_processor.py  evaluate.py  line_tagging_processor.py  pipeline.py  rdr.py  tagger.py  tokenizer_pipeline.py  utility.py
src/rules_generator/RDRPOSTagger/SCRDRlearner/: Node.py  Object.py  SCRDRTree.py  SCRDRTreeLearner.py
src/rules_generator/RDRPOSTagger/Utility/: Config.py  Eval.py  LexiconCreator.py  Utils.py
src/rules_generator/RDRPOSTagger/pSCRDRtagger/: ExtRDRPOSTagger.py
tests/: test_data_processor.py  test_example.py  test_tagger.py  test_tokenizer_pipeline.py
